# Aditya-Ai

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  AdityaCore.spec  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VESPERA_AI_DETAILS.md  VESPERA_STRUCTURE.md  build_ascended.ps1  docker-compose.yml  generate_stability_files.ps1  install.bat  install.ps1  mypy.ini  netlify.toml  package.json  pytest.ini  readme.md  refactor_atomic.py  repair.bat  ruff.toml  update.bat
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SUPPORT.md  dependabot.yml  labeler.yml  pull_request_template.md
AdityaWeb/: package-lock.json  package.json
backend/: main.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  ui_server.py
backend/core/: aditya_kernel_supervisor.py  aditya_memory.py  aditya_scheduler.py  aditya_voice.py  audio_recovery.py  db_doctor.py  keyboard_listener.py  llm_engine.py  ocr_engine.py  proactive_helper.py  signal_handler.py  skills_manager.py
backend/core/wake_system/: base_wake_plugin.py  keyword_wake_plugin.py
backend/data/: memory.json  settings.json
backend/modules/: aditya_silent_launcher.py  app_opener.py  desktop_ops.py  file_indexer.py  file_ops.py  youtube_player.py
backend/skills/: ide_assistant.py  study_helper.py
backend/tests/: conftest.py  test_additional_modules.py  test_aditya_app_resolver.py  test_file_indexer.py  test_settings_manager.py  test_wake_system.py
(+719 files in other folders)
