[project]
name = "aditya-core"
version = "1.0.0"
description = "Cognitive backend daemon and sentient operating engine for ADITYA OS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "Flask>=2.3.0",
    "Flask-Cors>=4.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "psutil>=5.9.0",
    "sqlite3; python_version < '3'"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
